# tuisic

./: .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  TODO.md  tuisic.pc.in
.github/: FUNDING.yml
.github/workflows/: release.yml
desktop/: tuisic.desktop
src/: Track.h  config.hpp  fetch.cpp  justmusic.cpp  justmusic.hpp  lastfm.cpp  lastfm.hpp  localStorage.cpp  main.cpp  main.hpp  mpris_handler.cpp  player.cpp  player.hpp  playlist_handler.cpp  saavn.cpp  soundcloud.cpp  soundcloud.hpp  visualizer.hpp
src/ai/: command_handler.hpp  json_output.hpp  mcp_server.hpp
src/audio/: audio_capture.hpp  discord_handler.cpp  lyrics_fetcher.cpp  lyrics_fetcher.hpp  mpris_handler.cpp  player.cpp  player.hpp  visualizer.hpp
src/common/: Track.h  notification.cpp  notification.hpp  paths.hpp
src/core/: main.cpp  main.hpp
src/core/config/: config.hpp  theme.cpp  theme.hpp
src/services/justmusic/: justmusic.cpp  justmusic.hpp
src/services/lastfm/: lastfm.cpp  lastfm.hpp
src/services/saavn/: saavn.cpp
src/services/soundcloud/: soundcloud.cpp  soundcloud.hpp
src/storage/: localStorage.cpp  playlist_handler.cpp
